@@ -1,6 +1,7 @@
 # 0.5.0-SNAPSHOT
-- add docker build
-- add logrus with multiple output : file + stdout
+- feat: add docker run
+- feat: add docker build
+- feat: add logrus with multiple output : file + stdout
 
 # 0.4.0
 - add log file
